homepage: fix occasional misaligned layout of statistics

--- a/pegasus/sites.v3/code.org/public/css/homepage.css
+++ b/pegasus/sites.v3/code.org/public/css/homepage.css
@@ -557,6 +557,11 @@ body.modal-open .supreme-container{
   text-transform: uppercase;
 }
 
+.statistics {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .statistics a .stats-number {
   text-align: center;
   color: rgb(77, 87, 95);
